Force order of loading xerces SAX parser so that including saxon.jar doest accidently pull in the embedded alphred parser