@@ -1,9 +1,11 @@
+
 @setlocal
 @echo off
 IF NOT DEFINED XMLSH GOTO NOX 
-IF NOT DEFINED CLASSPATH call %~dp0\xmlshpath.bat
+SET CP=%XMLSH%\bin\*;%XMLSH%\lib\*
+SET _JVMDEFS=-Djavax.xml.parsers.SAXParserFactory=org.apache.xerces.jaxp.SAXParserFactoryImpl
 IF NOT DEFINED XMLSH_JVMOPTS SET XMLSH_JVMOPTS=-XX:+UseConcMarkSweepGC -Xmx1024m -Xms256m 
-@start javaw -XX:+UseConcMarkSweepGC  -Xmx1024m -Xms256m org.xmlsh.sh.ui.XShell   %*
+@start javaw %_JVMDEFS% -cp %CP% %XMLSH_JVMOPTS% org.xmlsh.sh.ui.XShell   %*
 exit /b 0
 
 :NOX
